fixtures/python/keyword/should_fail/comment_with_keywords.py
# TODO: add fallback for missing config
value = get_config("timeout")

# mock implementation for now
def process():
    pass

# use stub until API is ready
def fetch_data():
    pass

# fake response for testing
data = {"status": "ok"}
